--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "font";
+    src: local("font"), url("./fonts/font.ttf") format("ttf");
+    font-weight: normal;
+ }
